<resources>
    <string name="app_name">Mad Level 1 Task 2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="table_header_A">A</string>
    <string name="table_header_B">B</string>
    <string name="table_header_conjunction">A ^ B</string>
    <string name="option_true">T</string>
    <string name="option_false">F</string>
    <string name="submit">Submit</string>
    <string name="fields_empty">Not all answers are filled in!</string>
    <string name="answers_correct">You have %d out of %d answers correct! Almost there!</string>
    <string name="all_answers_correct">All answers are correct! Well done!</string>
    <string name="all_answers_incorrect">None of your answers are correct, try again!</string>
</resources>